added video and images

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p>Download Excurion (Coming soon)</p>
+    <p>Download Excurion (Coming soon!)</p>
+    <video src="./resources/videos/excursion.mp4" autoplay poster="excursion.png">
+
+    </video>
+    <h1>Your personal travel guide</h1>
+    <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+    <img src="./resources/images/camp.jpg" alt="glowing tent in a desert">
+    <img src="./resources/images/phone.png" alt="small white smartphone">
+    <h1>Coming Soon for IPhone and Android</h1>
+    <p>Download Excursion (Coming Soon!)
   </body>
 </html>
