--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
   </head>
 
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <p>Download Excurion (Coming soon!)</p>
+    <h1 class="header-main">Discover hidden places in the world around you</h1>
+    <p class="link">Download Excurion (Coming soon!)</p>
     <video src="./resources/videos/excursion.mp4" autoplay poster="excursion.png">
 
     </video>
-    <h1>Your personal travel guide</h1>
+    <h1 class="header">Your personal travel guide</h1>
     <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
     <img src="./resources/images/camp.jpg" alt="glowing tent in a desert">
+    <br><br><br>
     <img src="./resources/images/phone.png" alt="small white smartphone">
     <h1>Coming Soon for IPhone and Android</h1>
-    <p>Download Excursion (Coming Soon!)
+    <p class="link">Download Excursion (Coming Soon!)
+    <p class="copyright">&copy; Excursion</p>
   </body>
 </html>
