--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <body>
     <h1 class="header-main">Discover hidden places in the world around you</h1>
     <p class="link">Download Excurion (Coming soon!)</p>
-    <video src="./resources/videos/excursion.mp4" autoplay poster="excursion.png">
-
+    <video width="" height="" autoplay>
+    <source src="./resources/videos/excursion.mp4" type="video/mp4">
+    <source src="movie.ogg" type="video/ogg">
+    Your browser does not support the video tag.
     </video>
     <h1 class="header">Your personal travel guide</h1>
     <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
