--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
   <head>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
-
   <body>
-    <h1 class="header-main">Discover hidden places in the world around you</h1>
-    <p class="link">Download Excurion (Coming soon!)</p>
-    <video width="" height="" autoplay>
-    <source src="./resources/videos/excursion.mp4" type="video/mp4">
-    <source src="movie.ogg" type="video/ogg">
+
+    <!--main title-->
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a class="link" href="#"">Download Excurion (Coming soon!)</a></p>
+    <video autoplay muted loop>
+      <source src="./resources/videos/excursion.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-    <h1 class="header">Your personal travel guide</h1>
-    <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+
+    <!--information section-->
+
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <img src="./resources/images/camp.jpg" alt="glowing tent in a desert">
     <br><br><br>
     <img src="./resources/images/phone.png" alt="small white smartphone">
+
+    <!--Coming Soon-->
+
     <h1>Coming Soon for IPhone and Android</h1>
-    <p class="link">Download Excursion (Coming Soon!)
-    <p class="copyright">&copy; Excursion</p>
+    <p>Download Excursion (Coming Soon!)
+    <p>&copy; Excursion</p>
   </body>
 </html>
