--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!--main title-->
     <h1>Discover hidden places in the world around you</h1>
-    <p><a class="link" href="#"">Download Excurion (Coming soon!)</a></p>
+    <p><a class="cs" href="#"">Download Excurion (Coming soon!)</a></p>
     <video autoplay muted loop>
       <source src="./resources/videos/excursion.mp4" type="video/mp4">
     Your browser does not support the video tag.
@@ -24,7 +24,7 @@
     <!--Coming Soon-->
 
     <h1>Coming Soon for IPhone and Android</h1>
-    <p>Download Excursion (Coming Soon!)
-    <p>&copy; Excursion</p>
+    <p class="cs">Download Excursion (Coming Soon!)
+    <p class="copyright">&copy; Excursion</p>
   </body>
 </html>
